cosmic-theme/src/output/snapshots/cosmic_theme__output__qt_output__tests__dark_default_kcolorscheme.snap
---
source: cosmic-theme/src/output/qt_output.rs
expression: dark_default_kcolorscheme
---
# GENERATED BY COSMIC

[ColorEffects:Disabled]
Color=43,43,43
ColorAmount=0
ColorEffect=0
ContrastAmount=0.65
ContrastEffect=1
IntensityAmount=0.1
IntensityEffect=2

[ColorEffects:Inactive]
ChangeSelectionColor=false
Enable=false
Color=27,27,27
ColorAmount=0.025
ColorEffect=2
ContrastAmount=0.1
ContrastEffect=2
IntensityAmount=0
IntensityEffect=0

[Colors:Button]
BackgroundAlternate=0,120,215
BackgroundNormal=60,60,60
DecorationFocus=126,187,255
DecorationHover=126,187,255
ForegroundActive=126,187,255
ForegroundInactive=211,211,211
ForegroundLink=126,187,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=231,231,231
ForegroundPositive=94,219,140
ForegroundVisited=126,187,255

[Colors:Complementary]
BackgroundAlternate=0,120,215
BackgroundNormal=27,27,27
DecorationFocus=126,187,255
DecorationHover=126,187,255
ForegroundActive=126,187,255
ForegroundInactive=211,211,211
ForegroundLink=126,187,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=231,231,231
ForegroundPositive=94,219,140
ForegroundVisited=126,187,255

[Colors:Header]
BackgroundAlternate=26,32,36
BackgroundNormal=27,27,27
DecorationFocus=126,187,255
DecorationHover=126,187,255
ForegroundActive=126,187,255
ForegroundInactive=211,211,211
ForegroundLink=126,187,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=231,231,231
ForegroundPositive=94,219,140
ForegroundVisited=126,187,255

[Colors:Header][Inactive]
BackgroundAlternate=26,32,36
BackgroundNormal=27,27,27
DecorationFocus=126,187,255
DecorationHover=126,187,255
ForegroundActive=126,187,255
ForegroundInactive=211,211,211
ForegroundLink=126,187,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=231,231,231
ForegroundPositive=94,219,140
ForegroundVisited=126,187,255

[Colors:Selection]
BackgroundAlternate=14,74,121
BackgroundNormal=0,120,215
DecorationFocus=0,120,215
DecorationHover=0,120,215
ForegroundActive=67,67,67
ForegroundInactive=34,94,141
ForegroundLink=27,27,27
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=67,67,67
ForegroundPositive=94,219,140
ForegroundVisited=0,120,215

[Colors:Tooltip]
BackgroundAlternate=44,50,55
BackgroundNormal=46,46,46
DecorationFocus=126,187,255
DecorationHover=126,187,255
ForegroundActive=126,187,255
ForegroundInactive=211,211,211
ForegroundLink=126,187,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=231,231,231
ForegroundPositive=94,219,140
ForegroundVisited=126,187,255

[Colors:View]
BackgroundAlternate=44,50,55
BackgroundNormal=46,46,46
DecorationFocus=126,187,255
DecorationHover=126,187,255
ForegroundActive=126,187,255
ForegroundInactive=211,211,211
ForegroundLink=126,187,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=231,231,231
ForegroundPositive=94,219,140
ForegroundVisited=126,187,255

[Colors:Window]
BackgroundAlternate=26,32,36
BackgroundNormal=27,27,27
DecorationFocus=126,187,255
DecorationHover=126,187,255
ForegroundActive=126,187,255
ForegroundInactive=211,211,211
ForegroundLink=126,187,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=231,231,231
ForegroundPositive=94,219,140
ForegroundVisited=126,187,255

[General]
ColorScheme=CosmicDark
Name=COSMIC Dark
shadeSortColumn=true

[Icons]
Theme=breeze-dark

[KDE]
contrast=4
widgetStyle=qt6ct-style

[WM]
activeBackground=27,27,27
activeBlend=126,187,255
activeForeground=126,187,255
inactiveBackground=27,27,27
inactiveBlend=126,187,255
inactiveForeground=126,187,255
