cosmic-theme/src/output/snapshots/cosmic_theme__output__qt_output__tests__light_default_kcolorscheme.snap
---
source: cosmic-theme/src/output/qt_output.rs
expression: light_default_kcolorscheme
---
# GENERATED BY COSMIC

[ColorEffects:Disabled]
Color=194,194,194
ColorAmount=0
ColorEffect=0
ContrastAmount=0.65
ContrastEffect=1
IntensityAmount=0.1
IntensityEffect=2

[ColorEffects:Inactive]
ChangeSelectionColor=false
Enable=false
Color=215,215,215
ColorAmount=0.025
ColorEffect=2
ContrastAmount=0.1
ContrastEffect=2
IntensityAmount=0
IntensityEffect=0

[Colors:Button]
BackgroundAlternate=0,120,215
BackgroundNormal=173,173,173
DecorationFocus=0,0,0
DecorationHover=0,0,0
ForegroundActive=0,0,0
ForegroundInactive=38,38,38
ForegroundLink=0,0,0
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=18,18,18
ForegroundPositive=0,87,44
ForegroundVisited=0,0,0

[Colors:Complementary]
BackgroundAlternate=0,120,215
BackgroundNormal=27,27,27
DecorationFocus=126,187,255
DecorationHover=126,187,255
ForegroundActive=126,187,255
ForegroundInactive=211,211,211
ForegroundLink=126,187,255
ForegroundNegative=255,160,154
ForegroundNeutral=255,163,125
ForegroundNormal=231,231,231
ForegroundPositive=94,219,140
ForegroundVisited=126,187,255

[Colors:Header]
BackgroundAlternate=204,210,215
BackgroundNormal=215,215,215
DecorationFocus=0,0,0
DecorationHover=0,0,0
ForegroundActive=0,0,0
ForegroundInactive=38,38,38
ForegroundLink=0,0,0
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=18,18,18
ForegroundPositive=0,87,44
ForegroundVisited=0,0,0

[Colors:Header][Inactive]
BackgroundAlternate=204,210,215
BackgroundNormal=215,215,215
DecorationFocus=0,0,0
DecorationHover=0,0,0
ForegroundActive=0,0,0
ForegroundInactive=38,38,38
ForegroundLink=0,0,0
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=18,18,18
ForegroundPositive=0,87,44
ForegroundVisited=0,0,0

[Colors:Selection]
BackgroundAlternate=108,168,215
BackgroundNormal=0,120,215
DecorationFocus=0,120,215
DecorationHover=0,120,215
ForegroundActive=246,246,246
ForegroundInactive=123,183,230
ForegroundLink=215,215,215
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=246,246,246
ForegroundPositive=0,87,44
ForegroundVisited=0,120,215

[Colors:Tooltip]
BackgroundAlternate=233,239,243
BackgroundNormal=245,245,245
DecorationFocus=0,0,0
DecorationHover=0,0,0
ForegroundActive=0,0,0
ForegroundInactive=38,38,38
ForegroundLink=0,0,0
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=18,18,18
ForegroundPositive=0,87,44
ForegroundVisited=0,0,0

[Colors:View]
BackgroundAlternate=233,239,243
BackgroundNormal=245,245,245
DecorationFocus=0,0,0
DecorationHover=0,0,0
ForegroundActive=0,0,0
ForegroundInactive=38,38,38
ForegroundLink=0,0,0
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=18,18,18
ForegroundPositive=0,87,44
ForegroundVisited=0,0,0

[Colors:Window]
BackgroundAlternate=204,210,215
BackgroundNormal=215,215,215
DecorationFocus=0,0,0
DecorationHover=0,0,0
ForegroundActive=0,0,0
ForegroundInactive=38,38,38
ForegroundLink=0,0,0
ForegroundNegative=137,4,24
ForegroundNeutral=121,44,0
ForegroundNormal=18,18,18
ForegroundPositive=0,87,44
ForegroundVisited=0,0,0

[General]
ColorScheme=CosmicLight
Name=COSMIC Light
shadeSortColumn=true

[Icons]
Theme=breeze

[KDE]
contrast=4
widgetStyle=qt6ct-style

[WM]
activeBackground=215,215,215
activeBlend=215,215,215
activeForeground=0,0,0
inactiveBackground=215,215,215
inactiveBlend=215,215,215
inactiveForeground=0,0,0
